input field implementation using angular material and JQuery

--- a/src/app/components/input-wrapper/input-wrapper.component.html
+++ b/src/app/components/input-wrapper/input-wrapper.component.html
@@ -1,1 +1,4 @@
-<p>input-wrapper works!</p>
+<div class="grid-container">
+  <label class="grid-child" for="tags">Tags using JQuery: </label>
+  <input id="tags" class="grid-child">
+</div>
